<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cutonala.calculadora.MainActivity" >

    <EditText
        android:id="@+id/numero1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numero1"
        android:layout_below="@+id/numero1"
        android:layout_marginTop="23dp"
        android:text="@string/numero2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="39dp"
        android:text="@string/numero1" />

    <EditText
        android:id="@+id/numero2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSuma"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/numero2"
        android:layout_marginTop="20dp"
        android:onClick="btnSumaOnClick"
        android:text="@string/suma" />

    <Button
        android:id="@+id/btnResta"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSuma"
        android:layout_alignBottom="@+id/btnSuma"
        android:layout_toRightOf="@+id/btnSuma"
        android:onClick="btnRestaOnClick"
        android:text="@string/resta" />

    <Button
        android:id="@+id/btnMultiplicacion"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnResta"
        android:layout_alignBottom="@+id/btnResta"
        android:layout_toRightOf="@+id/btnResta"
        android:onClick="btnMultiplicacionOnClick"
        android:text="@string/multiplicacion" />

    <Button
        android:id="@+id/btnDivision"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnMultiplicacion"
        android:layout_toRightOf="@+id/btnMultiplicacion"
        android:onClick="btnDivisionOnClick"
        android:text="@string/division" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSuma"
        android:layout_below="@+id/btnSuma"
        android:layout_marginTop="44dp"
        android:text="@string/resultado" />

</RelativeLayout>